<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".livelocation">



    <LinearLayout
        android:id="@+id/statusLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/detailsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone" />

        <TextView
            android:id="@+id/progressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getting_location"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible" />

        <Button
            android:textColor="#000"
            android:background="@color/zxing_transparent"
            android:id="@+id/gpsButton"
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:onClick="openLocationSettings"
            android:text="@string/turn_on_GPS"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareLayout"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/statusLayout"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <Button
            android:textColor="#078FF7"
            android:background="@color/zxing_transparent"
            android:id="@+id/shareButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="shareLocation"
            android:text="@string/share_location" />

        <Button
            android:textColor="#F75307"
            android:background="@color/zxing_transparent"
            android:id="@+id/copyButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="copyLocation"
            android:text="@string/copy_location" />

        <Button
            android:textColor="#3DB907"
            android:background="@color/zxing_transparent"
            android:id="@+id/viewButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="viewLocation"
            android:text="@string/view_location" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5402205609052624/5494220597"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
    </com.google.android.gms.ads.AdView>




</RelativeLayout>